Security through github

--- a/edge/SecurityTest-Github/src/main/resources/static/index.html
+++ b/edge/SecurityTest-Github/src/main/resources/static/index.html
@@ -13,13 +13,13 @@
 <script type="text/javascript"
     src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="text-align:center">
     <h1>Login</h1>
     <div class="container unauthenticated">
         With GitHub: <a href="/oauth2/authorization/github">click here</a>
     </div>
     <div class="container authenticated" style="display: none">
-        Logged in as: <span id="user"></span>
+        Logged in as: <span id="user"> User not found error </span>
         <div>
             <button onClick="logout()" class="btn btn-primary">Logout</button>
         </div>
@@ -42,7 +42,7 @@
                 }
               });
           $.get("/user", function(data) {
-            $("#user").html(data.name);
+            $("#user").html(data.login);
             $(".unauthenticated").hide();
             $(".authenticated").show();
           });
