Integrated zuul & eurkea

--- a/edge/SecurityTest-Github/src/main/resources/static/index.html
+++ b/edge/SecurityTest-Github/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
 <base href="/" />
 <link rel="stylesheet" type="text/css"
     href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 <script type="text/javascript"
     src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -16,6 +17,7 @@
 <body style="text-align:center">
     <h1>Login</h1>
     <div class="container unauthenticated">
+    <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
         With GitHub: <a href="/oauth2/authorization/github">click here</a>
     </div>
     <div class="container authenticated" style="display: none">
